Fix operator button vertical alignment

--- a/client/index.less
+++ b/client/index.less
@@ -55,17 +55,12 @@ body{
   background-color: rgba(175, 175, 175, 0.95);
 }
 
-// #zero {
-//   width: 116px;
-//   height: 48px;
-//   margin-right: -7px;
-// }
-
 .operator {
   height: 10vh;
   background-color: #F6872C;
   color: #ffffff;
   text-align: center;
+  padding-top: .55em;
 }
 
 .operator:hover {
